[project]
name = "stripe-test"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "stripe>=15.1.0",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.20.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "email-validator>=2.3.0",
]
